[package]
name = "melminter"
version = "0.7.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

description = "official Melmint client"
license = "MPL-2.0"
repository = "https://github.com/themeliolabs/melminter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
themelio-nodeprot = "0.11.3"
tmelcrypt= "0.2.4"
# melpow= { git = "https://github.com/themeliolabs/themelio-core" }
structopt= "0.3.26"
tracing-subscriber = "0.3.11"
log= "0.4.17"
tracing= "0.1.34"
# smolscale= "0.3.20"
smol= "1.2.5"
anyhow= "1.0.57"
serde={ version = "1.0.137", features = ["derive"] } 
serde_json= "1.0.81"
hex= "0.4.3"
surf={ version = "2.3.2", features = ["h1-client-rustls"], default-features = false }
stdcode = "0.1.7"
themelio-stf = "0.10.5"
melwallet-client= "0.6.5"
num_cpus= "1.13.1"
themelio-structs = "0.2.3"
themelio-bootstrap = "0.6.0"
fastrand= "1.7.0"
prodash = { version = "18.0.2", features = ["render-tui", "render-tui-crossterm", "unit-human", "render-line", "render-line-crossterm"] }
dashmap= "5.3.4"
core_affinity = "0.5.10"
env_logger = "0.9.0"
dirs = "4.0.0"
tap = "1.0.1"
scopeguard = "1.1.0"
melpow = "0.1.1"
