[package]
name = "melminter"
version = "0.8.2"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2021"

description = "official Melmint client"
license = "MPL-2.0"
repository = "https://github.com/mel-project/melminter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmelcrypt = "0.2.4"
structopt= "0.3.26"
tracing-subscriber = "0.3.15"
log= "0.4.17"

smol= "1.2.5"
anyhow= "1.0.58"
hex= "0.4.3"
stdcode = "0.1.10"

melwallet = { git = "https://github.com/mel-project/melwallet", branch = "check-balanced" }
num_cpus= "1.13.1"

fastrand= "1.8.0"
prodash = { version = "18", features = ["render-tui", "render-tui-crossterm", "unit-human", "render-line", "render-line-crossterm"] }
dashmap= "5.3.4"
core_affinity = "0.5.10"
env_logger = "0.9.0"
dirs = "4.0.0"
tap = "1.0.1"
scopeguard = "1.1.0"
melpow = "0.1.1"
melstructs = "0.3.2"
melprot = "0.13.2"
# melprot = { path = "../melprot" }
melstf = "0.12.0"
melbootstrap = { git = "https://github.com/mel-project/melbootstrap" }
melvm = "0.1.1"
smolscale = "0.3.52"
parking_lot = "0.12.1"
bytes = "1.4.0"
